Adjusted text orientation and added headers for photo gallery

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- Main CSS Files -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- Custom CSS Files -->
+    <link rel="stylesheet" href="css/custom.css">
+
     <!-- Namari Color CSS -->
     <link rel="stylesheet" href="css/namari-color.css">
 
@@ -154,7 +157,6 @@
 
                 <!--Call to Action-->
                 <a href="http://bit.ly/climboffpeak" target="_blank" class="button">Book with ClimbPass today!</a>
-                
                 <!-- <form id="addToMailingList" onclick="addEmailToMailingList()">
                     Name:<br>
                     <input type="text" name="name"><br>
@@ -389,7 +391,7 @@
 
                 </div>
 
-                <div class="col-2-3">
+                <div class="col-3 text-center">
 
                     <a href="http://t-hall.sg/" class="col-1">
                         <img src="images/partner-images/company-logo1.png" alt="T-Hall"/>
@@ -397,6 +399,8 @@
                     <a href="http://climberslaboratory.com.sg/" class="col-1">
                         <img src="images/partner-images/company-logo2.png" alt="Climbers Lab"/>
                     </a>
+                </div>
+                <div class="col-3 text-center">
                     <a href="http://www.boulderm.com/" class="col-1">
                         <img src="images/partner-images/company-logo3.png" alt="Boulder Movement"/>
                     </a>
@@ -410,8 +414,13 @@
         <!--End of Partners-->
 
         <!--Gallery-->
-        <aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-gallery
+        <aside id="gallery" class="row text-center scrollto clearfix gallery-photo" data-featherlight-gallery
                  data-featherlight-filter="a">
+
+                 <div class="section-heading">
+                    <h3>GALLERY</h3>
+                    <h2 class="section-title">Photo Gallery</h2>
+                </div>
 
                 <a href="images/gallery-images/gallery-image-1.jpg" data-featherlight="image" class="col-3 wow fadeIn"
                    data-wow-delay="0.1s"><img src="images/gallery-images/gallery-image-1.jpg" alt="Landing Page"/></a>
