--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </a>
                             </li>
                             <li>
-                                <a target="_blank" title="behance" href="mailto: info@climbpass.co">
+                                <a target="_blank" title="behance" href="mailto:info@climbpass.co">
                                     <i class="fa fa-at fa-1x"></i><span>Email</span>
                                 </a>
                             </li>
@@ -391,7 +391,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!--End of Team-->
 
         <!--Partners-->
-        <section id="partners" class="scrollto clearfix">
+        <section id="partners" class="scrollto clearfix gym-list">
             <div class="row no-padding-bottom clearfix">
 
                 <div class="col-3">
@@ -421,7 +421,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <img src="images/partner-images/company-logo4.png" alt="Camp 5"/>
                     </a>
                 </div>
-
+                <div class="row clearfix">
+                    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ffnou1MuH0PGYE3mwKZ4m7DRNPtq_28B"></iframe>
+                </div>
+                
             </div>
         </section>
         <!--End of Partners-->
@@ -523,10 +526,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
             </div>
-
+        </section>
+        <section id="contact-form" class="text-center">
+            <div class="row clearfix">
+                <div class="section-heading">
+                    <h3>CONTACT</h3>
+                    <h2 class="section-title">Contact us</h2>
+                </div>
+                <p>Please contact us by sending an email at <a href="mailto:info@climbpass.co">info@climbpass.co</a></p>
+            </div>
 
         </section>
-        <!--End of Introduction-->
 
         <!--Team-->
         <aside id="team" class="scrollto text-center" data-enllax-ratio=".2">
@@ -577,7 +587,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
 
         </aside>
-        <!--End of Team-->
+        <!--End of Introduction-->
+
     </main>
     <!--End Main Content Area-->
 
