--- a/index.html
+++ b/index.html
@@ -541,8 +541,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!--Team member 1-->
                 <blockquote class="col-4 team-member classic">
                     <img src="images/team-images/team-1.jpg" alt="Ernest"/>
-                    <q>When I’m not at a wall, I’m usually hunting for the best third wave coffees, 
-                        preferably bright and acidic, in white-washed minimalist cafes. </q>
+                    <q>I'm the man behind this 'madness' and am responsible for all business and partnership matters. A sociology major, I'm relentlessly curious about 
+                        how this world really works, and have more questions than answers.
+                        When I’m not climbing, I’m usually hunting for the best third wave coffees, 
+                        in white-washed minimalist cafes. </q>
                     <footer>Ernest Teh - Business Development</footer>
                 </blockquote>
                 <!-- End of Team Member-->
