--- a/index.html
+++ b/index.html
@@ -165,11 +165,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 <div class="section-heading">
                     <h1>CLIMBING IS FOR EVERYONE.</h1>
-                    <h2>This January, enjoy up to 50% off climbing passes during off-peak hours, <b>with ClimbPass</b>. </h2>
                 </div>
 
                 <!--Call to Action-->
-                <a href="http://bit.ly/climboffpeak" target="_blank" class="button">Book with ClimbPass today!</a>
+                <a href="https://forms.gle/B5dvhNhTaW3qorNw9" target="_blank" class="button">Sign up to join our waitlist today!</a>
                 <!-- <form id="addToMailingList" onclick="addEmailToMailingList()">
                     Name:<br>
                     <input type="text" name="name"><br>
