--- a/index.html
+++ b/index.html
@@ -540,8 +540,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!--Team member 1-->
                 <blockquote class="col-4 team-member classic">
                     <img src="images/team-images/team-1.jpg" alt="Ernest"/>
-                    <q>When I’m not at a wall, I’m usually hunting for the best third wave coffees, 
-                        preferably bright and acidic, in white-washed minimalist cafes. </q>
+                    <q>Ernest is curious and a deep generalist, and wants to travel to Africa one day.
+                        When he's not at a wall, he's either hunting for the best third wave coffees. 
+                         </q>
                     <footer>Ernest Teh - Business Development</footer>
                 </blockquote>
                 <!-- End of Team Member-->
